Email overflow resolved in sidebar.css

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -106,6 +106,7 @@
     font-weight: 550;
     text-decoration: none;
     color: var(--text-color);
+    word-wrap: break-word;
 }
 
 /* Contact list Styling */
